# UEM2

./: .gitignore  particle_ideas.js
backend/: .gitignore  Makefile  Pipfile  auth.py  course.py  database.db  models.py  nginx.conf  pyproject.toml  resource.py  schemas.py  server.py  util.py
backend/app/: deps.py  main.py  models.py
backend/app/core/: config.py  security.py
backend/app/routers/: auth.py  courses.py  resources.py  topics.py  users.py  util.py
backend/app/tests/: conftest.py  test_app.py  test_courses.py  test_resources.py  test_users.py  util.py
backend/app/util/: data.py  email.py
backend/scripts/: emails.sh
django-backend/: Pipfile
django-backend/uembackend/: manage.py
django-backend/uembackend/resources/: admin.py  models.py  urls.py  views.py
django-backend/uembackend/resources/migrations/: 0001_initial.py  0002_profile_remove_resource_votes_vote_and_more.py  0003_resource_created_by.py
django-backend/uembackend/uembackend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.vue  ExampleTodo.vue  aws-exports.js  main.js
frontend/src/assets/: main.scss  theme.scss
frontend/src/components/: AuthForm.vue  CourseCard.vue  Header.vue  Modal.vue  SearchResult.vue  SmallHeader.vue
frontend/src/components/ui/: Button.vue  Checkbox.vue  EditableList.vue  Modal.vue
frontend/src/router/: index.js  index.ts
frontend/src/services/: api.service.js  api.service.ts  jwt.service.ts
frontend/src/store/: index.js
frontend/src/types/: Resource.ts
frontend/src/views/: About.vue  Course.vue  Home.vue  Login.vue  New.vue  NewCourse.vue  Resources.vue  Student.vue  Transcript.vue
frontend2/: index.html  package.json
frontend2/src/: App.vue  ExampleTodo.vue  main.js
frontend2/src/components/: AuthForm.vue  Background.vue  CourseCard.vue  HelloWorld.vue  SearchResult.vue  SmallHeader.vue  p5.vue
frontend2/src/config/: index.js
frontend2/src/router/: index.js
frontend2/src/services/: api.service.js  palette.service.js
frontend2/src/store/: index.js
frontend2/src/stories/: Button.stories.js  Field.stories.js
frontend2/src/views/: Course.vue  Login.vue  New.vue  Resources.vue  Transcript.vue
fuckme/: .gitignore  Makefile  Pipfile  app.py  pyproject.toml  test.sh  test_app.py
fuckme/app/: database.py  main.py  models.py
fuckme/app/core/: config.py  logger.py  security.py
fuckme/app/routers/: courses.py  resources.py  topics.py  users.py
fuckme/app/tests/: conftest.py  test_app.py  test_courses.py  test_resources.py  test_topics.py  test_users.py
fuckme/app/util/: data.py  email.py
fuckme/scripts/: test.sh
fuckme/tests/: test_app.py
questgen/: notes.md  pyproject.toml
questgen/HF/: custom.py  models.py  pipelinetest.py  tokenizer.py
questgen/generator/: pipelines.py  question_gen.ipynb  test.py
questgen/papers/: hugging_face_notes.md  notes.md
questgen/scraper/: pdf.py  scraper.py  web.py
(+6 files in other folders)
